objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CN_All_Attended_Members_Number__c</fullName>
        <label>All Attended Members Number</label>
        <summaryFilterItems>
            <field>CampaignMember.CN_Type__c</field>
            <operation>notEqual</operation>
            <value>Lead</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_All_Members_Number__c</fullName>
        <label>All Members Number</label>
        <summaryFilterItems>
            <field>CampaignMember.CN_Type__c</field>
            <operation>notEqual</operation>
            <value>Lead</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_All_SKU_Number__c</fullName>
        <label>All SKU Number</label>
        <summaryForeignKey>CN_Campaign_Product__c.CN_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>5J</fullName>
                </value>
                <value>
                    <fullName>ANTICHICOLLI</fullName>
                </value>
                <value>
                    <fullName>BARNIER OLIVES</fullName>
                </value>
                <value>
                    <fullName>BASTIDES</fullName>
                </value>
                <value>
                    <fullName>BEAUFOR</fullName>
                </value>
                <value>
                    <fullName>Beillevaire</fullName>
                </value>
                <value>
                    <fullName>BERETTA</fullName>
                </value>
                <value>
                    <fullName>BEYONG MEAT</fullName>
                </value>
                <value>
                    <fullName>Cabrifin</fullName>
                </value>
                <value>
                    <fullName>CAPRICE DES DIEUX</fullName>
                </value>
                <value>
                    <fullName>CAVIAR &amp; TRADITIONS</fullName>
                </value>
                <value>
                    <fullName>Chateau d&apos;Estoublon</fullName>
                </value>
                <value>
                    <fullName>Chef Studio OIL</fullName>
                </value>
                <value>
                    <fullName>Chef Studio Pastry</fullName>
                </value>
                <value>
                    <fullName>COEUR DE LION</fullName>
                </value>
                <value>
                    <fullName>CORMAN</fullName>
                </value>
                <value>
                    <fullName>DOBLA</fullName>
                </value>
                <value>
                    <fullName>DODONI</fullName>
                </value>
                <value>
                    <fullName>Elle &amp; Vire</fullName>
                </value>
                <value>
                    <fullName>FERMES DE LA TREMBLAYE</fullName>
                </value>
                <value>
                    <fullName>Giovanni Ferrari</fullName>
                </value>
                <value>
                    <fullName>ILE DE FRANCE</fullName>
                </value>
                <value>
                    <fullName>IRCA</fullName>
                </value>
                <value>
                    <fullName>LE RUSTIQUE</fullName>
                </value>
                <value>
                    <fullName>Lescure</fullName>
                </value>
                <value>
                    <fullName>Liberty Lane</fullName>
                </value>
                <value>
                    <fullName>LOSTE TRADI-FRANCE</fullName>
                </value>
                <value>
                    <fullName>Milkana</fullName>
                </value>
                <value>
                    <fullName>Norohy</fullName>
                </value>
                <value>
                    <fullName>OVODAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Campaign_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Channel__c</fullName>
        <label>Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>WS</fullName>
                </value>
                <value>
                    <fullName>DS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Customer_Category__c</fullName>
        <label>Customer Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAPA</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Catering</fullName>
                </value>
                <value>
                    <fullName>Coffee/Tea Shop</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Retailor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Execution_Type__c</fullName>
        <label>Execution Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Demonstration</fullName>
                </value>
                <value>
                    <fullName>VIP Class</fullName>
                </value>
                <value>
                    <fullName>1on1</fullName>
                </value>
                <value>
                    <fullName>VIP Dinner</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
                <value>
                    <fullName>On-Site Order</fullName>
                </value>
                <value>
                    <fullName>Livestreaming</fullName>
                </value>
                <value>
                    <fullName>Solution Development</fullName>
                </value>
                <value>
                    <fullName>Short Video</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Is_Chef_Creator__c</fullName>
        <formula>CreatedBy.Profile.Name = &quot;CN Chef&quot; ||  CreatedBy.Profile.Name = &quot;CN Chef Manager&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Chef Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Campaign__c</fullName>
        <formula>OwnerId =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Within_6_Months__c</fullName>
        <formula>StartDate  &gt;= ADDMONTHS(ToDay(),-6) &amp;&amp; StartDate &lt;= ToDay()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN_Is_Within_6_Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_New_Product_Launch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Product Launch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Num_Of_Generate_Opp__c</fullName>
        <label>Num Of Generate Opp</label>
        <summaryFilterItems>
            <field>CampaignMember.CN_Able_to_generate_opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CN_Number_of_Audiences__c</fullName>
        <inlineHelpText>For Live Streaming Only</inlineHelpText>
        <label>Number of Audiences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Product_Category__c</fullName>
        <label>Product Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>GOURMET &amp; GROCERY</fullName>
                </value>
                <value>
                    <fullName>PASTRY</fullName>
                </value>
                <value>
                    <fullName>Chef Studio Pastry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHEESE</fullName>
                </value>
                <value>
                    <fullName>BUTTER</fullName>
                </value>
                <value>
                    <fullName>CREAM</fullName>
                </value>
                <value>
                    <fullName>COLD CUTS &amp; MEAT</fullName>
                </value>
                <value>
                    <fullName>FOIS GRAS</fullName>
                </value>
                <value>
                    <fullName>GROCERY</fullName>
                </value>
                <value>
                    <fullName>CHOCOLATE &amp; DECORATION</fullName>
                </value>
                <value>
                    <fullName>PUREE</fullName>
                </value>
                <value>
                    <fullName>PRE MIX</fullName>
                </value>
                <value>
                    <fullName>VALUE - ADDED</fullName>
                </value>
                <value>
                    <fullName>FROZEN PASTRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_VIP__c</fullName>
        <formula>IF(INCLUDES(CN_Execution_Type__c, &quot;VIP Class&quot;), TRUE, FALSE)</formula>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CN_Execution_Type__c</columns>
        <columns>CN_Channel__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CN_New_Product_Launch__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CN_Execution_Type__c</columns>
        <columns>CN_Channel__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CN_New_Product_Launch__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Org_Campaign_Hierarchy</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Org_Campaign_Hierarchy</label>
    </listViews>
    <recordTypes>
        <fullName>CN_Campaign</fullName>
        <active>true</active>
        <label>Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Parent_Campaign</fullName>
        <active>true</active>
        <label>Parent Campaign</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Campaign_Audiences_Number_IsBlank</fullName>
        <active>false</active>
        <errorConditionFormula>AND($Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, OR(RecordType.DeveloperName = &apos;CN_Campaign&apos;, RecordType.DeveloperName = &apos;CN_Parent_Campaign&apos;),  ISPICKVAL(Status, &quot;Completed&quot;),  ISBLANK(CN_Number_of_Audiences__c))</errorConditionFormula>
        <errorDisplayField>CN_Number_of_Audiences__c</errorDisplayField>
        <errorMessage>Number of audiences is a must field to input for livestreaming campaign when campaign completes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Campaign_Check_Customer_Category</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, 
  OR(
    RecordType.DeveloperName = &apos;CN_Campaign&apos;, 
    RecordType.DeveloperName = &apos;CN_Parent_Campaign&apos;
  ),
  ISPICKVAL(Type, &apos;Road Show&apos;),
  ISNULL(CN_Customer_Category__c ) 
)</errorConditionFormula>
        <errorDisplayField>CN_Customer_Category__c</errorDisplayField>
        <errorMessage>Customer category is mandatory to choose when event type of campaign is road show.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Campaign_Check_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, 
  OR(
    RecordType.DeveloperName = &apos;CN_Campaign&apos;, 
    RecordType.DeveloperName = &apos;CN_Parent_Campaign&apos;
  ),
  OR(
    ISNEW(),
    ISCHANGED(StartDate)
  ),  
  StartDate &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>StartDate</errorDisplayField>
        <errorMessage>Start date must not be earlier than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Campaign_Check_numOfAud_LiveStreaming</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, 
  OR(
    RecordType.DeveloperName = &apos;CN_Campaign&apos;, 
    RecordType.DeveloperName = &apos;CN_Parent_Campaign&apos;
  ),  
  INCLUDES(CN_Execution_Type__c, &quot;Livestreaming&quot;) ,
  ISPICKVAL(Status, &quot;Completed&quot;),
  ISBLANK( CN_Number_of_Audiences__c )
)</errorConditionFormula>
        <errorDisplayField>CN_Number_of_Audiences__c</errorDisplayField>
        <errorMessage>You must enter number of audiences for livestreaming campaign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Campaign_Completed_Block_Edit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c, 
OR(
    RecordType.DeveloperName = &apos;CN_Campaign&apos;, 
    RecordType.DeveloperName = &apos;CN_Parent_Campaign&apos;
   ), 
OR(
    ISPICKVAL(PRIORVALUE(Status), &quot;Completed&quot;),
    ISPICKVAL(PRIORVALUE(Status), &quot;Aborted&quot;)
   )
)</errorConditionFormula>
        <errorMessage>You cannot edit anything once completed or aborted.</errorMessage>
    </validationRules>
</CustomObject>